--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center done">해외여행 가기</div>
+        <div class="bucket img1-t5 center">해외여행 가기</div>
         <div class="bucket img2-t5 center">뮤지컬 2편</div>
         <div class="bucket img2-t5 center">전시회 2개</div>
         <div class="bucket img1-t5 center">매일 일기쓰기</div>
